# FacadeTrack

./: .gitignore  README.md  cli.py  demo.sh  pyproject.toml  requirements.txt
samples/: README.md
samples/GPS/: GH010001_GoPro Max-GPS5.csv
samples/csv/: sample_footprints.csv  sample_ground_truth.csv  sample_matches.csv  sample_matches_orientation.csv
scripts/: generate_sample_images.py
vrtoolkit/: VLMpipeline.py  __init__.py  cli.py  dewarp.py  frame_extraction.py  orientation.py  spatial_matching.py  vision.py
